[package]
name = "warp-mp-ipfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

rust-ipfs.workspace = true
libipld.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = {workspace = true, features = ["full"] }
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
either.workspace = true
bs58 = "0.4"

tracing = "0.1"

chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
fdlimit = "0.2"
bs58 = "0.4"
warp-pd-flatfile = { path = "../warp-pd-flatfile" }
warp-pd-stretto = { path = "../warp-pd-stretto" }
rustyline-async = "0.3"
comfy-table = "6.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"

[features]
default = []
build-header = []
