[package]
name = "warp-mp-solana"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }
anyhow = "1"

[dev-dependencies]
warp-pd-flatfile = { path = "../warp-pd-flatfile" }
warp-pd-stretto = { path = "../warp-pd-stretto" }
serde_json = "1.0"
hex = "0.4.3"

[build-dependencies]
cbindgen = "0.23"
