[package]
name = "warp-mp-solana"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }
warp-derive = { path = "../../warp/warp-derive" }
bs58 = "0.4"
anyhow = "1.0"
thiserror = "1.0"
wasm-bindgen = { version = "0.2" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
tiny-bip39 = "0.8"
zeroize = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
users = { git = "https://github.com/Satellite-im/solana-programs", features = ["no-entrypoint"] }
friends = { git = "https://github.com/Satellite-im/solana-programs", features = ["no-entrypoint"] }
groupchats = { git = "https://github.com/Satellite-im/solana-programs", features = ["no-entrypoint"] }
anchor-client = "0.24.2"
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
borsh = "0.9.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
solana-sdk = "1.9.20"
web-sys = { version = "0.3" }
js-sys = { version = "0.3" }
serde-wasm-bindgen = "0.4.2"

[dev-dependencies]
warp-pd-flatfile = { path = "../warp-pd-flatfile" }
warp-pd-stretto = { path = "../warp-pd-stretto" }
serde_json = "1.0"
hex = "0.4.3"

[build-dependencies]
cbindgen = "0.23"

[features]
build-header = []