[package]
name = "warp-pd-flatfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp-pocket-dimension = { path = "../../modules/warp-pocket-dimension" }
warp-hooks = { path = "../../utils/warp-hooks" }
warp-module = { path = "../../utils/warp-module" }
warp-data = { path = "../../utils/warp-data" }
warp-common = { path = "../../utils/warp-common", features = ["async"] }
thiserror = "1.0"
walkdir = "2.3"
blake2 = "0.10"