[package]
name = "warp-pd-flatfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { path = "../../warp" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

[features]
default = []

[build-dependencies]
cbindgen = "0.23"
