[package]
name = "warp-pd-flatfile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

[features]
default = []

[build-dependencies]
cbindgen = "0.23"
