[package]
name = "warp-pd-memory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

thiserror = "1.0"

wasm-bindgen = "0.2"

[build-dependencies]
cbindgen = "0.23"
