[package]
name = "warp-pd-stretto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

stretto = { version = "0.3", features = ["full"] }
thiserror = "1.0"

[build-dependencies]
cbindgen = "0.23"

[features]
build-header = []