[package]
name = "warp-rg-gun"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
warp = { path = "../../warp" }

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }

gundb = { version = "0.1.1" }
uuid = { version = "0.8", features = ["serde", "v4"] }