[package]
name = "warp-rg-gun"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
async-trait = "0.1"
warp = { path = "../../warp" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

futures = { version = "0.3" }

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }

gundb = { version = "0.2" }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
warp-pd-stretto = { path = "../warp-pd-stretto" }
warp-mp-solana = { path = "../warp-mp-solana" }
rustyline-async = "0.2"
