[package]
name = "warp-rg-ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

ipfs = { git = "https://github.com/Satellite-im/rust-ipfs", rev = "4b25a45df6b24406d0199b2d87a3151a90941526", features = [
    "external-gossipsub-stream",
] }
libipld = { version = "0.14", features = ["serde-codec"] }

uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

futures = { version = "0.3" }
async-trait = { version = "0.1" }
async-stream = "0.3"
anyhow = { version = "1" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
bs58 = "0.4"
cfg-if = "1.0"

hex = "0.4"
bayespam = "1.1.0"

[dev-dependencies]
fdlimit = "0.2"
warp-pd-stretto = { path = "../warp-pd-stretto" }
warp-pd-flatfile = { path = "../warp-pd-flatfile" }
warp-mp-ipfs = { path = "../warp-mp-ipfs" }
warp-fs-ipfs = { path = "../warp-fs-ipfs" }
rustyline-async = "0.2"
comfy-table = "6.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "3.2", features = ["derive"] }
rpassword = "7.0"

[features]
default = []
build-header = []
