[package]
name = "warp-rg-ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

rust-ipfs = "=0.3.0-alpha.2"
libipld = { version = "0.15", features = ["serde-codec"] }

uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

futures = { version = "0.3" }
async-trait = { version = "0.1" }
async-stream = "0.3"
anyhow = { version = "1" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
bs58 = "0.4"

bayespam = "1.1.0"

chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
fdlimit = "0.2"
warp-pd-stretto = { path = "../warp-pd-stretto" }
warp-pd-flatfile = { path = "../warp-pd-flatfile" }
warp-mp-ipfs = { path = "../warp-mp-ipfs" }
warp-fs-ipfs = { path = "../warp-fs-ipfs" }
rustyline-async = "0.3"
comfy-table = "6.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.2"

[features]
default = []
build-header = []
