[package]
name = "warp-rg-ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

rust-ipfs.workspace = true
libipld = { workspace = true, features = ["serde-codec"] }

uuid = { workspace = true, features = ["serde", "v4"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }

futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58 = "0.4"

bayespam = "1.1.0"

chrono = { workspace = true, features = ["serde"] }

bytes.workspace = true

[dev-dependencies]
fdlimit = "0.2"
warp-pd-stretto = { path = "../warp-pd-stretto" }
warp-pd-flatfile = { path = "../warp-pd-flatfile" }
warp-mp-ipfs = { path = "../warp-mp-ipfs" }
warp-fs-ipfs = { path = "../warp-fs-ipfs" }
rustyline-async = "0.3"
comfy-table = "6.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.2"

[features]
default = []
build-header = []
