[package]
name = "warp-rg-libp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { path = "../../warp" }

libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = ["tcp-tokio", "dns-tokio"] } # TODO: Lock to a specific commit until version is publish
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
anyhow = { version = "1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bs58 = "0.4"

[dev-dependencies]
warp-pd-stretto = { path = "../warp-pd-stretto" }
warp-mp-solana = { path = "../warp-mp-solana" }
rustyline-async = "0.2"

[features]
default = ["floodsub"]
gossipsub = []
floodsub = []