[package]
name = "warp-rg-libp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

libp2p = { version = "0.46", features = ["tcp-tokio", "dns-tokio", "dcutr"] }

uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
anyhow = { version = "1" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bs58 = "0.4"
cfg-if = "1.0"
either = "1"
tracing = "0.1"

hex = "0.4"

groupchats = { git = "https://github.com/Satellite-im/solana-programs", features = ["no-entrypoint"], optional = true }
anchor-client = { version = "0.24.2", optional = true }
borsh = { version = "0.9.3", optional = true }

[dev-dependencies]
warp-pd-stretto = { path = "../warp-pd-stretto" }
warp-mp-solana = { path = "../warp-mp-solana" }
warp-mp-ipfs = { path = "../warp-mp-ipfs" }
rustyline-async = "0.2"
comfy-table = "6.0"
tracing-subscriber = "0.3"

[build-dependencies]
cbindgen = "0.23"


[features]
default = ["solana"]
solana = ["groupchats", "anchor-client", "borsh"]
build-header = []