[package]
name = "warp-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.4"
anyhow = "1.0"
thiserror = "1.0"
warp = { path = "../../warp" }
wasm-bindgen = { version = "0.2" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
tiny-bip39 = "0.8"
zeroize = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
users = { git = "https://github.com/Satellite-im/solana-programs", features = ["no-entrypoint"] }
friends = { git = "https://github.com/Satellite-im/solana-programs", features = ["no-entrypoint"] }
groupchats = { git = "https://github.com/Satellite-im/solana-programs", features = ["no-entrypoint"] }
anchor-client = "0.24.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
borsh = "0.9.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
solana-sdk = "1.9.20"
web-sys = { version = "0.3" }
js-sys = { version = "0.3" }
serde-wasm-bindgen = "0.4.2"