[package]
name = "warp-multipass"
version = "0.1.0"
description = "TBD"
# readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/Satellite-im/Warp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp-common = { path = "../../utils/warp-common" }
warp-crypto = { path = "../../utils/warp-crypto" }

[features]
default = []