[package]
name = "warp-raygun"
version = "0.1.0"
description = "TBD"
# readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/Satellite-im/Warp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
warp-module = { version = "0.1.0", path = "../../utils/warp-module" }
warp-data = { version = "0.1.0", path = "../../utils/warp-data" }
warp-common = { version = "0.1.0", path = "../../utils/warp-common" }