[package]
name = "warp-pd-stretto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp-pocket-dimension = { path = "../../modules/warp-pocket-dimension" }
warp-hooks = { path = "../../utils/warp-hooks" }
warp-module = { path = "../../utils/warp-module" }
warp-data = { path = "../../utils/warp-data" }
warp-common = { path = "../../utils/warp-common" }

stretto = { version = "0.3", features = ["full"] }
thiserror = "1.0"