[package]
name = "audio-codec-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bs1770 = "1.0.0"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15.0"
fdk-aac = { git="https://github.com/sdwoodbury/fdk-aac-rs", branch="master" } #"0.4.0"
log = { version = "0.4.17", features = ["std"]}
mp4 = { git="https://github.com/sdwoodbury/mp4-rust", rev="1101df41bb6de4ca4c2f1073e33ed8c9f106525c" }
opus = "0.3.0"
ringbuf = "0.3.3"
simple_logger = "4.1.0"
webrtc = "0.6.0"

anyhow.workspace = true
bytes.workspace = true
once_cell.workspace = true
rand.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
